--- a/index.html
+++ b/index.html
@@ -1120,17 +1120,17 @@
         // CONFIGURATION
         // ============================================
         
-        const CONFIG = {
-            VERCEL_API_URL: 'https://ctrlf-backend.vercel.app',
-            GOOGLE_CLIENT_ID: '577327560802-fpv89k3okp55hn1qsuirdafemnuicupf.apps.googleusercontent.com',
-            BACKEND_URL: 'https://script.google.com/macros/s/AKfycbyCwUYLyNiZ_W1kMUC9ktdY8YMI6S8iaZrTqv_XATuprda68egEehgT8ovWHWNu6UU/exec // Replace after deploying
-            SCOPES: [
-                'https://www.googleapis.com/auth/drive.readonly',
-                'https://www.googleapis.com/auth/gmail.readonly',
-                'https://www.googleapis.com/auth/userinfo.profile',
-                'https://www.googleapis.com/auth/userinfo.email'
-            ].join(' ')
-        };
+   const CONFIG = {
+    VERCEL_API_URL: 'https://ctrlf-backend.vercel.app',
+    GOOGLE_CLIENT_ID: '577327560802-fpv89k3okp55hn1qsuirdafemnuicupf.apps.googleusercontent.com',
+    BACKEND_URL: 'https://script.google.com/macros/s/AKfycbyCwUYLyNiZ_W1kMUC9ktdY8YMI6S8iaZrTqv_XATuprda68egEehgT8ovWHWNu6UU/exec',
+    SCOPES: [
+        'https://www.googleapis.com/auth/drive.readonly',
+        'https://www.googleapis.com/auth/gmail.readonly',
+        'https://www.googleapis.com/auth/userinfo.profile',
+        'https://www.googleapis.com/auth/userinfo.email'
+    ].join(' ')
+};
 
         // ============================================
         // STATE
